<resources>
    <string name="app_name">TEAMTRIX</string>
    <string name="description_logo">Logo</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="text_description">Collaborate and Plan Together Access Multiple Devices on TEAMTRIX\'s Minimalist interface.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="log_in">Log in</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="loading">Loading...</string>
    <string name="user_name">User name</string>
    <string name="my_profile">My profile</string>
    <string name="sign_out">Sign out</string>
    <string name="mobile">Mobile</string>
    <string name="update">Update</string>
</resources>