<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IntroActivity">

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"
        android:contentDescription="@string/description_logo" />

    <ImageView
        android:id="@+id/ic_task"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
       app:layout_constraintTop_toBottomOf="@id/iv_app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_task_image"
        android:contentDescription="@string/description_logo"/>

    <TextView
        android:id="@+id/tv_lets_get_started"
        app:layout_constraintTop_toBottomOf="@id/ic_task"
        app:layout_constraintStart_toStartOf="@id/ic_task"
        app:layout_constraintEnd_toEndOf="@id/ic_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_text_description"
        app:layout_constraintTop_toBottomOf="@id/tv_lets_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_description"
        android:gravity="center"
        android:maxLines="3"
        android:textColor="@color/primary_text_color"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_text_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/btn_shape_rounded_with_bg"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:textColor="@color/secondary_text_color"
        android:textSize="20sp"
        android:background="@drawable/btn_shape_rounded"
        android:foreground="?attr/selectableItemBackground"/>



</androidx.constraintlayout.widget.ConstraintLayout>